test/mlir/matmul_bad_case_0.mlir.stderr
test/mlir/matmul_bad_case_0.mlir:4:3: error: custom op 'colgm.matmul' tensor rank must be >= 2
  return %0 : tensor<4x4xf32>
  ^
